<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/ImageViewStyle"
            android:contentDescription="@null" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout style="@style/LinearLayout_Style">

                <TextView
                    style="@style/team_A_text"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/team_A_Score"
                    android:text="@string/zero" />

                <Button
                    style="@style/team_A_Button_Goal"
                    android:onClick="addGoalTeamA"
                    android:text="@string/goal" />

                <TextView
                    android:id="@+id/team_a_red_score"
                    style="@style/team_A_Red_Score"
                    android:text="@string/zero" />

                <Button
                    style="@style/team_A_Button_Red_Card"
                    android:onClick="redForTeamA"
                    android:text="@string/red_card" />

                <TextView
                    android:id="@+id/team_a_foul_score"
                    style="@style/team_A_Foul_Score"
                    android:text="@string/zero" />

                <Button
                    style="@style/team_A_Foul_Button"
                    android:onClick="addFoulForTeamA"
                    android:text="@string/foul" />

            </LinearLayout>

            <LinearLayout style="@style/LinearLayout_Style">


                <TextView
                    style="@style/team_B_text"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/team_B_Score"
                    android:text="@string/zero" />

                <Button
                    style="@style/team_B_Button_Goal"
                    android:onClick="addGoalTeamB"
                    android:text="@string/goal" />

                <TextView
                    android:id="@+id/team_b_red_score"
                    style="@style/team_B_Red_Score"
                    android:text="@string/zero" />

                <Button
                    style="@style/team_B_Button_Red_Card"
                    android:onClick="redForTeamB"
                    android:text="@string/red_card" />

                <TextView
                    android:id="@+id/team_b_foul_score"
                    style="@style/team_B_Foul_Score"
                    android:text="@string/zero" />

                <Button
                    style="@style/team_B_Foul_Button"
                    android:onClick="addFoulForTeamB"
                    android:text="@string/foul" />

            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/Reset_Button"
            android:onClick="resetScore"
            android:text="@string/reset" />

    </RelativeLayout>
</ScrollView>
